# Neira

./: .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .npmrc  .pre-commit-config.yaml  AGENTS.md  CAPABILITIES.md  CODING_GUIDELINES.md  COMMENTING.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  JOURNALING.md  META_COVERAGE.md  README.md  TEAMWORK.md  WORKFLOW.md  action-nodes.md  analysis-architecture.md  analysis-nodes.md  automatic-population.md  deny.toml  deployment.md  eslint.config.mjs  faq.md  glossary.md  governance-structure.md  low-level-toolchain.md  main.py  memory-nodes.md  motivation.md  node-template.md  package-lock.json  package.json  package.json.bak  personality.md  pnpm-lock.yaml  pnpm-workspace.yaml  practical-guide.md  (+14 more)
.husky/: commit-msg  pre-commit
audio/: __init__.py  engine.py
backend/: Cargo.toml  ENV.md  TRAINING.md
backend/backend/snapshots_test/: snapshot-20250830095207.json
backend/context/: storage_metrics.json
backend/logs/: backend.log.2025-08-30
backend/snapshots/: snapshot-20250830093525.json
backend/src/: action_cell.rs  action_node.rs  analysis_cell.rs  analysis_node.rs  cell_registry.rs  event_bus.rs  hearing.rs  idempotent_store.rs  interaction_hub.rs  lib.rs  main.rs  memory_cell.rs  memory_node.rs  node_registry.rs  node_template.rs  organ_builder.rs  queue_config.rs  synapse_hub.rs  task_scheduler.rs  trigger_detector.rs
backend/src/action/: chat_cell.rs  chat_node.rs  diagnostics_cell.rs  diagnostics_node.rs  metrics_collector_node.rs  mod.rs  scripted_training_cell.rs  scripted_training_node.rs
backend/src/config/: mod.rs
backend/src/context/: context_storage.rs
backend/src/factory/: mod.rs
backend/src/http/: training_routes.rs
backend/src/immune_system/: mod.rs
backend/src/nervous_system/: anti_idle.rs  backpressure_probe.rs  base_path_resolver.rs  heartbeat.rs  host_metrics.rs  io_watcher.rs  loop_detector.rs  mod.rs  watchdog.rs
backend/src/policy/: mod.rs
backend/src/security/: init_config_cell.rs  init_config_node.rs  integrity_checker_cell.rs  integrity_checker_node.rs  mod.rs  quarantine_cell.rs  quarantine_node.rs  safe_mode_controller.rs
backend/src/system/: base_path_resolver.rs  host_metrics.rs  io_watcher.rs  mod.rs
backend/static/: admin.html
backend/tests/: analysis_cell_metrics_test.rs  analysis_node_metrics_test.rs  cell_registration.rs  cell_registry_reload.rs  chat_cell_metrics_test.rs  chat_cell_test.rs  chat_hub_test.rs  chat_node_metrics_test.rs  chat_node_test.rs  control_plane_test.rs  diagnostics_anomaly_test.rs  diagnostics_cell_test.rs  diagnostics_node_test.rs  io_watcher_env_test.rs  io_watcher_test.rs  memory_cell_metrics_test.rs  memory_node_metrics_test.rs  node_registry_reload.rs  node_template_tests.rs  organ_builder_test.rs  queue_config_test.rs  safe_mode_test.rs  schema_versions.rs  template_roundtrip.rs
backend/tests/common/: mod.rs
benchmarks/: tag_processor_benchmark.py
book_editor/: __init__.py  glossary_panel.py  links.py
characters/: __init__.py  compact.py  rpg_character.py
chat/: memory_store.py
code_editor/: __init__.py  collab_client.py  lsp_client.py  profiler_panel.py  translation_panel.py
code_templates/: example_plugin.py
collab/: __init__.py  client.py  server.py
config/: audio.yaml  editor.yaml  lang_quality.yml  licenses.yml  llm_config.json  memory.yml  search_domains.json
data/: inspiration_cards.json
docs/: README.md  STYLE.md  audio_engine.md  backend-api.md  cache_invalidation.md  cell-ids.md  channels.md  digestive_pipeline_flow.md  embedding_memory.md  ide-integration.md  immune_system.md  index.md  metrics_cells.md  metrics_nodes.md  mvp-modules.md  (+7 more)
rust/neira_rust/: Cargo.toml  README.md
rust/neira_rust/src/: event_bus.rs  knowledge_graph.rs  lib.rs  memory_index.rs  tag_processor.rs  verification.rs
spinal_cord/: AGENTS.md  Cargo.toml  ENV.md  TRAINING.md
spinal_cord/config/: digestive.toml  integrity.json
spinal_cord/src/: action_cell.rs  action_engine.rs  analysis_cell.rs  brain.rs  cell_template.rs  circulatory_system.rs  digestive_pipeline.rs  event_bus.rs  event_log.rs  hearing.rs  idempotent_store.rs  lib.rs  main.rs  memory_cell.rs  organ_builder.rs  queue_config.rs  synapse_hub.rs  task_scheduler.rs  time_metrics.rs  trigger_detector.rs
spinal_cord/src/action/: chat_cell.rs  diagnostics_cell.rs  metrics_collector_cell.rs  mod.rs  scripted_training_cell.rs
spinal_cord/src/config/: mod.rs
spinal_cord/src/context/: context_storage.rs  mod.rs
spinal_cord/src/factory/: mod.rs
spinal_cord/src/http/: training_routes.rs
spinal_cord/src/immune_system/: lymphatic_filter.rs  mod.rs
spinal_cord/src/nervous_system/: anti_idle.rs  anti_idle_microtasks.rs  backpressure_probe.rs  base_path_resolver.rs  host_metrics.rs  io_watcher.rs  loop_detector.rs  mod.rs
spinal_cord/src/persona/: interaction_verbs.rs  mod.rs  tone_state.rs
spinal_cord/src/policy/: mod.rs
spinal_cord/src/security/: init_config_cell.rs  integrity_checker_cell.rs  mod.rs  safe_mode_controller.rs
spinal_cord/src/training/: curriculum.rs  mod.rs  orchestrator.rs
spinal_cord/src/voice/: backend.rs  cells.rs  error.rs  mod.rs  organ.rs  phonemes.rs
spinal_cord/static/: admin.html  training.html
spinal_cord/static/training/: russian_literacy.json
spinal_cord/tests/: action_engine_test.rs  analysis_cell_metrics_test.rs  brain_flow_test.rs  brain_subscriber_test.rs  chat_cell_metrics_test.rs  chat_cell_test.rs  chat_hub_test.rs  control_plane_test.rs  diagnostics_cell_test.rs  digestive_pipeline_trybuild.rs  event_log_test.rs  immune_preflight_check.rs  interaction_verbs_test.rs  io_watcher_env_test.rs  io_watcher_test.rs  lymphatic_filter.rs  lymphatic_filter_event.rs  queue_config_test.rs  template_roundtrip.rs  tone_state_test.rs  training_curriculum_test.rs  voice_organ_test.rs
spinal_cord/tests/common/: mod.rs
spinal_cord/tests/trybuild/: digestive_settings_ok.rs  digestive_settings_unknown_field.rs  digestive_settings_unknown_field.stderr  digestive_settings_wrong_type.rs  digestive_settings_wrong_type.stderr
(+688 files in other folders)
