[package]
name = "neira"
version = "0.1.0"
edition = "2021"

[dependencies]
backend = { path = "backend" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema-valid = "0.5.2"
once_cell = "1"

[dev-dependencies]
serde_yaml = "0.9"
tempfile = "3"
tokio-util = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[package.metadata]
rustflags = ["-Dwarnings"]

[patch.crates-io]
kqueue-sys = { path = "patches/kqueue-sys" }
thiserror = { git = "https://github.com/dtolnay/thiserror", tag = "2.0.16" }
thiserror-impl = { git = "https://github.com/dtolnay/thiserror", tag = "2.0.16" }
tracing = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d" }
tracing-core = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d" }

