# neira:meta
# id: NEI-20250901-140800-jsonschema-bump
# intent: chore
# summary: |
#   Обновлена зависимость jsonschema до 0.33 для совместимости с reqwest 0.12 и base64 0.22.
# neira:meta
# id: NEI-20260413-spinal-path-update
# intent: chore
# summary: Обновлён путь к spinal_cord после переименования директории.
# neira:meta
# id: NEI-20260601-yaml-xml-deps
# intent: chore
# summary: Добавлены зависимости serde_yaml и serde-xml-rs для поддержки YAML и XML.

[package]
name = "neira"
version = "0.1.0"
edition = "2021"

[dependencies]
backend = { path = "spinal_cord" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema-valid = "0.5.2"
jsonschema = "0.33"
once_cell = "1"
serde_yaml = "0.9"
serde-xml-rs = "0.6"

[dev-dependencies]
tempfile = "3"
tokio-util = "0.7"
tokio = { version = "1", features = ["full"] }
metrics-exporter-prometheus = { version = "0.17", default-features = false }

[package.metadata]
rustflags = ["-Dwarnings"]

[patch.crates-io]
kqueue-sys = { path = "patches/kqueue-sys" }
thiserror = { git = "https://github.com/dtolnay/thiserror", tag = "2.0.16" }
thiserror-impl = { git = "https://github.com/dtolnay/thiserror", tag = "2.0.16" }
tracing = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d" }
tracing-core = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d" }
jsonschema-valid = { path = "patches/jsonschema-valid" }

