# neira:meta
# id: NEI-20250901-140800-jsonschema-bump
# intent: chore
# summary: |
#   Обновлена зависимость jsonschema до 0.33 для совместимости с reqwest 0.12 и base64 0.22.
# neira:meta
# id: NEI-20260413-spinal-path-update
# intent: chore
# summary: Обновлён путь к spinal_cord после переименования директории.
# neira:meta
# id: NEI-20260601-yaml-xml-deps
# intent: chore
# summary: Добавлены зависимости serde_yaml и serde-xml-rs для поддержки YAML и XML.
# neira:meta
# id: NEI-20260710-quick-xml-switch
# intent: chore
# summary: Заменена зависимость serde-xml-rs на quick-xml с поддержкой сериализации.
# neira:meta
# id: NEI-20260920-add-tracing-deps
# intent: chore
# summary: Добавлены зависимости tracing и tracing-subscriber для тестового логирования.
# neira:meta
# id: NEI-20261005-serial-test-dep
# intent: chore
# summary: Добавлена dev-зависимость serial_test для последовательных тестов.
# neira:meta
# id: NEI-20270904-windows-wasi-patch
# intent: chore
# summary: Добавлены патчи windows-*, wasi и зафиксированы версии dev-зависимостей.
# neira:meta
# id: NEI-20250904-deps-dedupe-adjust
# intent: chore
# summary: Убраны патчи windows-*/wasi; зафиксирован tokio 1.47.1; скрипт проверки дубликатов игнорирует Windows/WASI.

[package]
name = "neira"
version = "0.1.0"
edition = "2021"

[dependencies]
backend = { path = "spinal_cord" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema-valid = "0.5.2"
jsonschema = "0.33"
once_cell = "1"
serde_yaml = "0.9"
quick-xml = { version = "0.31", features = ["serialize"] }

[dev-dependencies]
tempfile = "3"
tokio-util = { version = "0.7.16" }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time", "fs", "io-util", "net", "sync", "signal", "process", "test-util"] }
metrics-exporter-prometheus = { version = "0.17", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "json", "fmt", "std"] }
serial_test = "3"

[package.metadata]
rustflags = ["-Dwarnings"]

[patch.crates-io]
kqueue-sys = { path = "patches/kqueue-sys" }
thiserror = { git = "https://github.com/dtolnay/thiserror", tag = "2.0.16" }
thiserror-impl = { git = "https://github.com/dtolnay/thiserror", tag = "2.0.16" }
tracing = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d" }
tracing-core = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d" }
jsonschema-valid = { path = "patches/jsonschema-valid" }
