[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "neyra"
version = "0.1.0"
description = "Нейра - персональный ИИ-помощник для писателей"
readme = "README.md"
requires-python = ">=3.8"

[tool.maturin]
manifest-path = "rust/neira_rust/Cargo.toml"
python-source = "src"
