[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema-valid = "0.5.2"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"
notify = { version = "8.2", default-features = false }
semver = "1"

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
kqueue-sys = { path = "../patches/kqueue-sys" }
