[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
jsonschema-valid = "0.5.2"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # direct file logging without tracing-appender


tracing-appender = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d", package = "tracing-appender" }

serde_yaml = "0.9"
notify = { version = "8.2", default-features = false }
semver = "1"
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = ["http-listener"] }
regex = "1"
fs2 = "0.4"
flate2 = { version = "1", default-features = false, features = ["zlib"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde", "alloc"] }
tokio-util = "0.7"
lru = "0.12"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
jsonpath_lib = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
futures-core = "0.3"
metrics = "0.24"

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
kqueue-sys = { path = "../patches/kqueue-sys" }
thiserror = { git = "https://github.com/dtolnay/thiserror", tag = "2.0.16" }
thiserror-impl = { git = "https://github.com/dtolnay/thiserror", tag = "2.0.16" }
tracing = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d" }
tracing-core = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d" }
jsonschema-valid = { path = "../patches/jsonschema-valid" }
