[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# neira:meta
# id: NEI-20250603-axum-0-8-bump
# intent: chore
# summary: |
#   Обновлен axum до 0.8 и добавлен tokio-tungstenite 0.27 для WebSocket API.
axum = { git = "https://github.com/tokio-rs/axum", rev = "ee1519c82f60fc3a14890d34c66581b9737df150", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
jsonschema-valid = "0.5.2"
once_cell = "1"
# neira:meta
# id: NEI-20260530-digestive-deps
# intent: chore
# summary: Добавлена зависимость thiserror для DigestivePipeline.
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] } # direct file logging without tracing-appender


tracing-appender = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d", package = "tracing-appender" }

serde_yaml = "0.9"
 # neira:meta
 # id: NEI-20260601-digestive-xml-dep
 # intent: chore
 # summary: Добавлена зависимость serde-xml-rs для разбора XML.
serde-xml-rs = "0.6"
notify = { version = "8.2", default-features = false }
semver = "1"
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = ["http-listener"] }
regex = "1"
fs2 = "0.4"
flate2 = { version = "1", default-features = false, features = ["zlib"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde", "alloc"] }
tokio-util = "0.7"
lru = "0.12"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
jsonpath_lib = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
futures = "0.3"
futures-core = "0.3"
metrics = "0.24"
tokio-tungstenite = "0.27"
sysinfo = "0.30"
sha2 = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[patch.crates-io]
kqueue-sys = { path = "../patches/kqueue-sys" }
thiserror = { git = "https://github.com/dtolnay/thiserror", tag = "2.0.16" }
thiserror-impl = { git = "https://github.com/dtolnay/thiserror", tag = "2.0.16" }
tracing = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d" }
tracing-core = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d" }
jsonschema-valid = { path = "../patches/jsonschema-valid" }

[[bin]]
name = "generate_cell"
path = "src/bin/generate_cell.rs"

