# neira:meta
# id: NEI-20250904-deps-dedupe-adjust
# intent: chore
# summary: Зафиксирован tokio 1.47.1; удалены патчи windows-*/wasi для устранения дублей в дереве зависимостей.

[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# neira:meta
# id: NEI-20250603-axum-0-8-bump
# intent: chore
# summary: |
#   Обновлен axum до 0.8 и добавлен tokio-tungstenite 0.27 для WebSocket API.
axum = { git = "https://github.com/tokio-rs/axum", rev = "ee1519c82f60fc3a14890d34c66581b9737df150", features = ["ws"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "io-util", "net", "time", "fs", "signal", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
jsonschema-valid = "0.5.2"
once_cell = "1"
# neira:meta
# id: NEI-20260530-digestive-deps
# intent: chore
# summary: Добавлена зависимость thiserror для DigestivePipeline.
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "json", "fmt", "std"] } # direct file logging without tracing-appender


tracing-appender = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d", package = "tracing-appender" }

serde_yaml = "0.9"
# neira:meta
# id: NEI-20260601-digestive-xml-dep
# intent: chore
# summary: Добавлена зависимость serde-xml-rs для разбора XML.
# neira:meta
# id: NEI-20260710-quick-xml-dep
# intent: chore
# summary: Заменена зависимость serde-xml-rs на quick-xml для разбора XML.
quick-xml = { version = "0.31", features = ["serialize"] }
# neira:meta
# id: NEI-20270615-lymphatic-deps
# intent: chore
# summary: Добавлены зависимости walkdir, syn, strsim и quote для лимфатического фильтра.
walkdir = "2"
syn = { version = "2", features = ["full"] }
strsim = "0.10"
quote = "1"
toml = "0.8"
notify = { version = "8.2.0", default-features = false }
semver = "1"
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = ["http-listener"] }
regex = "1"
fs2 = "0.4"
flate2 = { version = "1", default-features = false, features = ["zlib"] }
parking_lot = "0.12"
chrono = { version = "0.4.41", features = ["serde", "alloc"] }
tokio-util = { version = "0.7.16" }
lru = "0.12"
async-trait = "0.1"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "native-tls"] }
jsonpath_lib = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1.17" }
futures = "0.3"
futures-core = "0.3"
metrics = "0.24"
tokio-tungstenite = { version = "0.27.0" }
sysinfo = "0.37"
sha2 = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tower-http = { version = "0.6", features = ["cors"] }

# neira:meta
# id: NEI-20271005-quote-dedupe
# intent: chore
# summary: Удалён дублирующийся dependency quote = "1".

# neira:meta
# id: NEI-20270904-windows-wasi-patch
# intent: chore
# summary: Зафиксированы версии зависимостей и добавлены патчи windows-*, wasi.

[dev-dependencies]
tempfile = "3"
serial_test = "3"
# neira:meta
# id: NEI-20270420-trybuild-dep
# intent: test
# summary: Добавлена dev-зависимость trybuild для компиляционных проверок DigestivePipeline.
trybuild = "1"
# neira:meta
# id: NEI-20270401-httpmock-dep
# intent: test
# summary: Добавлена dev-зависимость httpmock для мокирования HTTP в тестах.
httpmock = "0.7"

[patch.crates-io]
kqueue-sys = { path = "../patches/kqueue-sys" }
thiserror = { git = "https://github.com/dtolnay/thiserror", tag = "2.0.16" }
thiserror-impl = { git = "https://github.com/dtolnay/thiserror", tag = "2.0.16" }
tracing = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d" }
tracing-core = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", rev = "f71cebe41e4c12735b1d19ca804428d4ff7d905d" }
jsonschema-valid = { path = "../patches/jsonschema-valid" }

[[bin]]
name = "generate_cell"
path = "src/bin/generate_cell.rs"
