[package]
name = "neira_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "neira_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
hnsw_rs = "0.3"

